--- a/SongsList/Views/Home/Index.cshtml
+++ b/SongsList/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
 @{ 
   ViewBag.Title = "My Songs";
 }
-
+<h1>Hello world</h1>
 <a asp-controller="Song" asp-action="Add">Add new song</a>
 <table class="table table-bordered table-striped">
   <thead>
